Add list of API projects

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/simon500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/nodeprojects500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Simon Game</h4>
-                        <p class="text-muted">CSS3 and JavaScript</p>
+                        <h4>NodeJS API Projects</h4>
+                        <p class="text-muted">NodeJS and MongoDB</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -142,11 +142,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/simon500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Tic-Tac-Toe</h4>
-                        <p class="text-muted">JavaScript and jQuery</p>
+                        <h4>Simon Game</h4>
+                        <p class="text-muted">CSS3 and JavaScript</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -156,10 +156,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/calculator500x360.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/tic-tac-toe500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>JavaScript Calculator</h4>
+                        <h4>Tic-Tac-Toe</h4>
                         <p class="text-muted">JavaScript and jQuery</p>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                         <img src="img/portfolio/weatherapp500x360.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Local Weather Web App</h4>
+                        <h4>Local Weather</h4>
                         <p class="text-muted">jQuery and Dark Sky API</p>
                     </div>
                 </div>
@@ -280,18 +280,44 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Simon Game</h2>
-                                <p class="item-intro text-muted">Memory game built in JavaScript</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/simon500x360.jpg" alt="">
-                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own version of <a href="https://en.wikipedia.org/wiki/Simon_(game)" target="_blank">Simon</a>, a memory-based game where the user has to watch a set of four buttons light up in a specific sequence. After the user successfully replicates the sequence via button presses, a new light is added to the sequence and another round begins. Each time the pattern is longer and thus the difficulty increases, with the ultimate goal being to remember a sequence of 20 lights!</p>
-                                <p>For this project there were two main challenges: the CSS and the JavaScript game logic. Working out how to construct the centred circular shapes and curved buttons via CSS was particularly challenging, but I am quite happy with the result. Check it out below!</p>
-                                <ul class="list-inline">
-                                    <li><strong>Date:</strong> August 2017</li>
-                                    <li><strong>Category:</strong> Game</li>
-                                </ul>
-                                <a href="simon-game/simon-game.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
-                                <a href="https://github.com/matt-dobie/simon-game" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
-                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
+                                <h2>NodeJS API Projects</h2>
+                                <p class="item-intro text-muted">A selection of APIs made with NodeJS, ExpressJS and MongoDB</p>
+                                <hr>
+                                <div class="portfolio-caption">
+                                    <h4>Timestamp Microservice</h4>
+                                    <p class="text-muted">An API that returns a unix timestamp or a natural language date</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> October 2017</li>
+                                        <li><strong>Category:</strong> Back-End API</li>
+                                    </ul>
+                                </div>
+                                <a href="https://fcc-timestamp-md.glitch.me/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/timestamp-microservice" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr>
+                                <div class="portfolio-caption">
+                                    <h4>Request Header Parser Microservice</h4>
+                                    <p class="text-muted">An API that gets the user's browser information (IP, language and operating system)</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> October 2017</li>
+                                        <li><strong>Category:</strong> Back-End API</li>
+                                    </ul>
+                                </div>
+                                <a href="https://fcc-header-parser-md.glitch.me/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/header-parser-microservice" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr>
+                                <div class="portfolio-caption">
+                                    <h4>URL Shortener Microservice</h4>
+                                    <p class="text-muted">An API that takes a regular URL and returns a shortened version</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> October 2017</li>
+                                        <li><strong>Category:</strong> Back-End API</li>
+                                    </ul>
+                                </div>
+                                <a href="https://fcc-url-shortener-md.glitch.me/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/url-shortener-microservice" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
                             </div>
                         </div>
                     </div>
@@ -315,16 +341,17 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Tic-Tac-Toe</h2>
-                                <p class="item-intro text-muted">Playable game of Tic-Tac-Toe built in JavaScript</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/tic-tac-toe500x360.jpg" alt="">
-                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own playable version of Tic-Tac-Toe. It includes a multiplayer mode for the user to play against a friend, as well as a single-player mode with four different levels of difficulty. To achieve this I had to build an AI system in JavaScript based on the <a href="https://en.wikipedia.org/wiki/Minimax" target="_blank">Minimax Algorithm</a> - one that allows the computer to actually decide what is the best move to make during its turn. This was by far the most challenging and exciting aspect of the project. Check it out below, and let me know if you manage to beat the 'Master' difficulty level in single-player (Hint: It should be impossible)!</p>
+                                <h2>Simon Game</h2>
+                                <p class="item-intro text-muted">Memory game built in JavaScript</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/simon500x360.jpg" alt="">
+                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own version of <a href="https://en.wikipedia.org/wiki/Simon_(game)" target="_blank">Simon</a>, a memory-based game where the user has to watch a set of four buttons light up in a specific sequence. After the user successfully replicates the sequence via button presses, a new light is added to the sequence and another round begins. Each time the pattern is longer and thus the difficulty increases, with the ultimate goal being to remember a sequence of 20 lights!</p>
+                                <p>For this project there were two main challenges: the CSS and the JavaScript game logic. Working out how to construct the centred circular shapes and curved buttons via CSS was particularly challenging, but I am quite happy with the result. Check it out below!</p>
                                 <ul class="list-inline">
-                                    <li><strong>Date:</strong> July 2017</li>
+                                    <li><strong>Date:</strong> August 2017</li>
                                     <li><strong>Category:</strong> Game</li>
                                 </ul>
-                                <a href="tic-tac-toe/tic-tac-toe.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
-                                <a href="https://github.com/matt-dobie/tic-tac-toe" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a href="simon-game/simon-game.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/simon-game" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
                         </div>
@@ -349,16 +376,16 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>JavaScript Calculator</h2>
-                                <p class="item-intro text-muted">A simple calculator application created with JavaScript</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/calculator500x360.jpg" alt="">
-                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to replicate a simple calculator! I achieved this using JavaScript for the logic/arithmetic, jQuery for any interaction with the page itself, and CSS for the styling. I enjoyed the challenge of diving deeper into JavaScript programming, and especially the challenge of incorporating the intricacies of the user experience that we take for granted when using a calculator (eg. negative numbers). Check it out below!</p>
+                                <h2>Tic-Tac-Toe</h2>
+                                <p class="item-intro text-muted">Playable game of Tic-Tac-Toe built in JavaScript</p>
+                                <img class="img-responsive img-centered" src="img/portfolio/tic-tac-toe500x360.jpg" alt="">
+                                <p>This game was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own playable version of Tic-Tac-Toe. It includes a multiplayer mode for the user to play against a friend, as well as a single-player mode with four different levels of difficulty. To achieve this I had to build an AI system in JavaScript based on the <a href="https://en.wikipedia.org/wiki/Minimax" target="_blank">Minimax Algorithm</a> - one that allows the computer to actually decide what is the best move to make during its turn. This was by far the most challenging and exciting aspect of the project. Check it out below, and let me know if you manage to beat the 'Master' difficulty level in single-player (Hint: It should be impossible)!</p>
                                 <ul class="list-inline">
                                     <li><strong>Date:</strong> July 2017</li>
-                                    <li><strong>Category:</strong> Web Application</li>
+                                    <li><strong>Category:</strong> Game</li>
                                 </ul>
-                                <a href="javascript-calculator/javascript-calculator.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
-                                <a href="https://github.com/matt-dobie/javascript-calculator" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a href="tic-tac-toe/tic-tac-toe.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/tic-tac-toe" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
                         </div>
@@ -463,15 +490,35 @@
                                 <div class="portfolio-caption">
                                     <h4>Portfolio Site</h4>
                                     <p class="text-muted">HTML5, CSS3, Bootstrap and jQuery</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> Feb 2017 - present</li>
+                                        <li><strong>Category:</strong> Website</li>
+                                    </ul>
                                 </div>
                                 <a href="" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/matt-dobie.github.io" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr><img class="img-responsive img-centered" src="img/portfolio/calculator500x360.jpg" alt="">
+                                <div class="portfolio-caption">
+                                    <h4>JavaScript Calculator</h4>
+                                    <p class="text-muted">JavaScript and jQuery</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> July 2017</li>
+                                        <li><strong>Category:</strong> Web Application</li>
+                                    </ul>
+                                </div>
+                                <a href="javascript-calculator/javascript-calculator.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/javascript-calculator" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
                                 <hr>
                                 <img class="img-responsive img-centered" src="img/portfolio/pomodoroclock500x360.jpg" alt="">
                                 <div class="portfolio-caption">
                                     <h4>Pomodoro Clock</h4>
                                     <p class="text-muted">JavaScript and jQuery</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> July 2017</li>
+                                        <li><strong>Category:</strong> Web Application</li>
+                                    </ul>
                                 </div>
                                 <a href="pomodoro-clock/pomodoro-clock.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/pomodoro-clock" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
@@ -481,6 +528,10 @@
                                 <div class="portfolio-caption">
                                     <h4>Random Quote Machine</h4>
                                     <p class="text-muted">JavaScript and jQuery</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> June 2017</li>
+                                        <li><strong>Category:</strong> Web Application</li>
+                                    </ul>
                                 </div>
                                 <a href="random-quote-machine/random-quote-machine.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/random-quote-machine" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
