Edit About Me text

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="col-md-6">
                     <div class="about-text text-justify">
                         <h4 class="subheading"></h4>
-                        <p>Hi I'm Matt, an aspiring web developer from Brisbane, Australia. This year I am on a journey to learn about the fundamentals of web development. Right now this involves working through tutorials and projects from the <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a> curriculum, as well as a tonne of extra online learning.</p>
+                        <p>Hi I'm Matt, an aspiring web developer from Brisbane, Australia. This year I am on a journey to learn about the fundamentals of web development. Right now this involves working through challenges and projects from the <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a> curriculum, as well as a tonne of extra online learning.</p>
                         <p>Through this site I am so excited to share with you everything that I have been working on. I hope you find something interesting! Along with coding my main passions are for music and pop culture. </p>
                     </div>
                 </div>
