Add descriptions to More Projects

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                                 <h2>Wikipedia Viewer</h2>
                                 <p class="item-intro text-muted">Search for Wikipedia Articles, or display a random article, using the MediaWiki API.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/wikipediaviewer500x360.jpg" alt="">
-                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate projects. The goal was to provide the user with a simple and intuitive way to either:</p>
+                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate front-end projects. The goal was to provide the user with a simple and intuitive way to either:</p>
                                 <ul class="list-inline special-list">
                                     <li>Search for a Wikipedia article</li>
                                     <li><strong>OR</strong></li>
@@ -450,9 +450,9 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <h2>Local Weather</h2>
-                                <p class="item-intro text-muted">Simple web page to display your local weather conditions using the Dark Sky API</p>
+                                <p class="item-intro text-muted">A simple web page to display your local weather conditions using the Dark Sky API</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/weatherapp500x360.jpg" alt="">
-                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate projects. The goal was to display the user's local weather conditions. I used HTML5 Geolocation to obtain location data, the Dark Sky API to provide the weather information, and the Bootstrap 4 framework to ensure that the page was available on all devices. I am especially proud of the visual design, with its bright weather-dependent colours and clean layout.</p>
+                                <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate front-end projects. The goal was to display the user's local weather conditions. I used HTML5 Geolocation to obtain location data, the Dark Sky API to provide the weather information, and the Bootstrap 4 framework to ensure that the page was available on all devices. I am especially proud of the visual design, with its bright weather-dependent colours and clean layout.</p>
                                 <ul class="list-inline">
                                     <li><strong>Date:</strong> June 2017</li>
                                     <li><strong>Category:</strong> Web Application</li>
@@ -490,6 +490,7 @@
                                 <div class="portfolio-caption">
                                     <h4>Portfolio Site</h4>
                                     <p class="text-muted">HTML5, CSS3, Bootstrap and jQuery</p>
+                                    <p>As a student of web development looking to start a career in the field, it's vital to have my own space on the web to display any relevant projects that I've worked on. This is the third version of that site, developed with HTML5, CSS3, Bootstrap 3, JavaScript and jQuery.</p>
                                     <ul class="list-inline">
                                         <li><strong>Date:</strong> Feb 2017 - present</li>
                                         <li><strong>Category:</strong> Website</li>
@@ -502,6 +503,7 @@
                                 <div class="portfolio-caption">
                                     <h4>JavaScript Calculator</h4>
                                     <p class="text-muted">JavaScript and jQuery</p>
+                                    <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to replicate a simple calculator! I achieved this using JavaScript for the logic/arithmetic, jQuery for any interaction with the page itself, and CSS for the styling. I enjoyed the challenge of diving deeper into JavaScript programming, and especially the challenge of incorporating the intricacies of the user experience that we often take for granted when using a calculator (eg. negative numbers). Check it out below!</p>
                                     <ul class="list-inline">
                                         <li><strong>Date:</strong> July 2017</li>
                                         <li><strong>Category:</strong> Web Application</li>
@@ -515,6 +517,7 @@
                                 <div class="portfolio-caption">
                                     <h4>Pomodoro Clock</h4>
                                     <p class="text-muted">JavaScript and jQuery</p>
+                                    <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> advanced front-end projects. The goal was to create my own version of a Pomodoro Clock which, using the <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank">Pomodoro Technique</a>, helps the user to increase their productivity by scheduling alternating periods of work and break time. It was created with JavaScript, jQuery and CSS. This project was challenging, but I enjoyed gaining a better knowledge of JavaScript timing and overcoming its slight (but significant) inaccuracies. Check it out below!</p>
                                     <ul class="list-inline">
                                         <li><strong>Date:</strong> July 2017</li>
                                         <li><strong>Category:</strong> Web Application</li>
@@ -528,6 +531,7 @@
                                 <div class="portfolio-caption">
                                     <h4>Random Quote Machine</h4>
                                     <p class="text-muted">JavaScript and jQuery</p>
+                                    <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate front-end projects. The aim is simply to allow the user to randomly generate famous quotes, both from real people and characters in movies. The clean minimalist layout was created using Bootstrap 4, and the quotes themselves were generated using the <a href="" target="_blank">Random Famous Quotes API</a> and JavaScript.</p>
                                     <ul class="list-inline">
                                         <li><strong>Date:</strong> June 2017</li>
                                         <li><strong>Category:</strong> Web Application</li>
@@ -536,6 +540,19 @@
                                 <a href="random-quote-machine/random-quote-machine.html" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
                                 <a href="https://github.com/matt-dobie/random-quote-machine" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr>
+                                <img class="img-responsive img-centered" src="img/portfolio/hanszimmer500x360.jpg" alt="">
+                                <div class="portfolio-caption">
+                                    <h4>Hans Zimmer Tribute Page</h4>
+                                    <p class="text-muted">Bootstrap and CSS</p>
+                                    <p>My very first project as part of the <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp</a> curriculum. The goal was to create a single-page tribute website for someone or something that interests me. I had recently seen the famous film composer Hans Zimmer in concert, and I find his music to be passionate and awe-inspiring. This page uses HTML5, Bootstrap 4 and some simple CSS to create a great looking and concise, yet informative, web page. Check it out below.</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> June 2017</li>
+                                        <li><strong>Category:</strong> Website</li>
+                                    </ul>
+                                </div>
+                                <a href="https://codepen.io/mattdobie/full/rmQoQv/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</a>
                             </div>
                         </div>
                     </div>
