Add Twitch Tracker project

--- a/index.html
+++ b/index.html
@@ -527,6 +527,20 @@
                                 <a href="https://github.com/matt-dobie/pomodoro-clock" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
                                 <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
                                 <hr>
+                                <img class="img-responsive img-centered" src="img/portfolio/twitchtracker500x360.jpg" alt="">
+                                <div class="portfolio-caption">
+                                    <h4>Twitch Tracker</h4>
+                                    <p class="text-muted">JavaScript and Bootstrap</p>
+                                    <p>This web app was developed as one of <a href="http://www.freecodecamp.com" target="_blank">freeCodeCamp's</a> intermediate front-end projects. The goal was to use the Twitch.tv JSON API to detect whether each Twitch channel from a selected list is online or not, and to provide the main information about the channel to the user. I achieved this using Bootstrap 4, CSS and jQuery. The trickiest aspect of this project was to get the page layout to scale like I wanted it to, but I am quite happy with the result. Check it out below!</p>
+                                    <ul class="list-inline">
+                                        <li><strong>Date:</strong> August 2017</li>
+                                        <li><strong>Category:</strong> Web Application</li>
+                                    </ul>
+                                </div>
+                                <a href="https://codepen.io/mattdobie/full/XayPLe/" class="btn btn-success" target="_blank"><i class="fa fa-plus"></i> Live Demo</a>
+                                <a href="https://github.com/matt-dobie/twitchtv-whats-on" class="btn btn-primary" target="_blank"><i class="fa fa-plus"></i> GitHub Repo</a>
+                                <a type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Close List</a>
+                                <hr>
                                 <img class="img-responsive img-centered" src="img/portfolio/randomquote500x360.jpg" alt="">
                                 <div class="portfolio-caption">
                                     <h4>Random Quote Machine</h4>
